# Othello-Game

./: CMakeLists.txt  CMakePresets.json
Othello-Game/: AIOne.cpp  AIOne.hpp  AITwo.cpp  AITwo.hpp  Bitboards.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Disk.cpp  Disk.hpp  Game.cpp  Game.hpp  Othello-Game.cpp  Othello-Game.h  Player.cpp  Player.hpp  Window.cpp  Window.hpp  bitboards  bitboards.cpp  define.hpp  main.cpp
Othello-Game/Bitboards.dSYM/Contents/: Info.plist
Othello-Game/Bitboards.dSYM/Contents/Resources/DWARF/: Bitboards
